[package]
name = "symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = "2.0.0"
clap = "4.3.12"
lang-c = "0.15.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_derive = "1.0.171"
serde_json = "1.0.102"
structopt = "0.3.26"
